2001-06-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.21 development.

2001-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (BOUNCE_DATED_TEMPLATE): Define the default template
	as ../templates/*.txt.

	(TMDA_VERSION): Update version number.

	(BOUNCE_SENDER_TEMPLATE): Ditto.

2001-06-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (maketext): Accept the fullpathname of the template file
	instead of assuming it lies in ../templates/.

	* Defaults.py (BOUNCE_ENV_SENDER): New variable to specify the
	envelope sender of bounce messages.

	(DELIVERY_AGENT): New variable containing TMDA version info.

	(BOUNCE_DATED_TEMPLATE): New variable specifying an optional
	custom template for 'dated' bounce messages.

	(BOUNCE_SENDER_TEMPLATE): New variable specifying an optional
	custom template for 'sender' bounce messages.
	
2001-06-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (format_timeout): A more efficient implementation which
	only contains one re.match call.  Also, return the singular
	version of the unit if the value is 1.
		
	(seconds): Ditto, plus fix a bug in the sys.exit() call where
	Defaults wasn't being imported.
	
2001-05-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (file_to_list): Allow inline comments in the .tmda-*
	files.  For example:
	friend@fbi.org       # My friend at the FBI

	(substring_match): Ditto.

	* Defaults.py (TMDA_VERSION): Begin 0.16 development.

2001-05-28  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.15 development.

	* Util.py:  Import Defaults only for functions that need them.
	Fixes tmda-keygen.

2001-05-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (ALLOW_MODE_640): New variable to support mode 640
	tmdarc files which are necessary when running TMDA through a qmail
	relay.
