@@ -1,3 +1,8 @@
+2001-06-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Util.py (findmatch): Function re-written to support patterns
+	based on Unix style wildcards.
+
 2001-06-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (TMDA_VERSION): Begin 0.21 development.
